--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -120,25 +120,28 @@
         organized to promote software freedom, open source software, free culture and open
         knowledge, a global movement that originally started more than 25 years ago.
 \n
-\nThe Conference will take place at 9 &amp; 10 May 2015 in Tirana and will gather free
+\n     The Conference will take place at <b>9 &amp; 10 May 2015</b> in <b>Tirana</b> and will gather free
         libre open source technology users, developers, academics, governmental
         agencies and people who share the idea that software should be free and open
         for the local community and governments to develop and customize to its needs;
         that knowledge is a communal property and free and open to everyone.
-      \n\nOur mission is educating Albanian youth, and not only, on free and
+      \n\n
+        Our mission is educating Albanian youth, and not only, on free and
         open source software, its ideology and the great community behind it.
 
-        \n\nJust like other successful regional conferences OSCAL provides a fertile
+        \n\nJust like other successful regional conferences <b>OSCAL</b> provides a fertile
         ground to build and enhance networking within the tech community, both in
         the local region and worldwide by being used as a meeting point for a network
         of individuals and companies with the aim of sponsoring and initiating projects
         which benefit the people and taxpayers in Albania and which should also result in
-        commercial benefits for the surrounding region.\n
-    Programmed by <a href="http://www.almotech.org/">ALMOTECH</a>.
-\n
-\n
-    "Source code is available under the GPLv3 <a href="https://www.gnu.org/copyleft/gpl.html">https://www.gnu.org/copyleft/gpl.html</a></string>
-
+        commercial benefits for the surrounding region.\n \n \n
+    "Source code is available under the GPLv3" <a href="https://www.gnu.org/copyleft/gpl.html">https://www.gnu.org/copyleft/gpl.html</a>
+    \n
+    \n
+    Based on the  <a href="https://archive.fosdem.org/2014/">FOSDEM</a> Android app
+    \n
+    \n
+    Developed by <a href="http://www.almotech.org/">ALMOTECH</a>.</string>
     <string name="organizers_text">The conference is supported and organized by Open Labs ,
         the community that promotes free libre open source culture in Albania since 2012.
         Open Labs is a non-government non-profit organization, based in Albania, that aims
