--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -171,17 +171,23 @@ OSCAL participant responsibilities
         even embrace. The discomfort that comes from stretching ourselves
         beyond what we thought possible makes what we\'re doing at the second
         edition of OSCAL worthwhile. Heck, if everyone could do this work,
-        they would — and it wouldn\'t be worth much.By the end of  the conference
+        they would — and it wouldn\'t be worth much.
+              \n
+    \n
+            By the end of  the conference
         and beyond (and if we do this right), each one of us will be transformed in
         some small way; each having learned at least one new thing, made at least one
         new friend and changed what we thought we knew for certain about free open source
         culture in Albania and beyond at least once. Learning, connecting and being open
         and adaptable to change, are the things that will most profoundly impact our work,
-        our lives and the open knowledge scene as we head into the future. So let\'s all do that!The
+        our lives and the open knowledge scene as we head into the future. So let\'s all do that!
+              \n
+    \n
+            The
         following is a short list of Participant Responsibilities specific to the conference. They
         were remixed by a similar list by our friends over at the Mozilla Foundation. Keyword here
         is remixed! These are not rules, but rather boundaries of participation during our time
-        together so that we all get the most out of it.
+        together so that we all get the most out of it.  \n
     </string>
 
 
@@ -200,7 +206,10 @@ OSCAL participant responsibilities
         and loudly. Check in with others as you go to make sure they understand. Some
         of us have physical limitations that make getting around difficult. Offer open
         structures with the idea of universal access, rather than waiting for special
-        requests.  Provide clear information on access. Make room (literally and metaphorically)
+        requests.  Provide clear information on access.
+          \n
+    \n
+        Make room (literally and metaphorically)
         for all before anyone has to ask. Seek to understand, then to be understood. Practice empathy.
         Assume positive intent.</string>
     <string name="code_of_conduct6">practice respect</string>
@@ -210,6 +219,8 @@ OSCAL participant responsibilities
         as much as our own.
 Take care of yourself, body and mind. We only have two days together and they will be long. To learn,
         participate and have fun you need to be at your best. Rest, eat, drink water, laugh a lot.
+          \n
+    \n
 Take care of the space and each other. Pick up trash. Share your power cord.</string>
     <string name="code_of_conduct8">be helpful</string>
     <string name="code_of_conduct9">If you see a problem, try to help. If you can\'t help,
@@ -218,7 +229,8 @@ Take care of the space and each other. Pick up trash. Share your power cord.</st
         uncomfortable — a comment, a joke, a slide — and can\'t address it with them directly,
         consider involving an intermediary, a volunteer and other people from the organizers crew.
         You will find them at the Open Labs info booth or by email at <a href="mailto:info@openlabs.cc">info@openlabs.cc</a>.
-
+  \n
+    \n
 If you\'ve made someone feel unsafe or uncomfortable, be open to adjusting your presentation or
         public speech and apologize directly when needed.</string>
 
