--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,6 +23,7 @@
     <string name="menu_tracks">Tracks</string>
     <string name="menu_sponsors">Sponsors</string>
     <string name="menu_venue">Venue</string>
+    <string name="menu_venue_detail">Venue Detail</string>
     <string name="menu_code">Code of Conduct</string>
     <string name="menu_live">Live</string>
     <string name="menu_speakers">Speakers</string>
